Mise a jour du projet Spark