@@ -2,10 +2,23 @@ name := "FraudDetection"
 
 version := "1.0"
 
-scalaVersion := "2.12.18"
+scalaVersion := "2.13.17"
 
 libraryDependencies ++= Seq(
   "org.apache.spark" %% "spark-core" % "3.5.0",
   "org.apache.spark" %% "spark-sql" % "3.5.0",
   "org.apache.spark" %% "spark-mllib" % "3.5.0"
 )
+
+fork := true
+
+javaOptions ++= Seq(
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
+)
+
+outputStrategy := Some(StdoutOutput)
